gitlab-pages/website/versioned_docs/version-0.48.0/manpages/ligo.md

### SYNOPSIS
ligo SUBCOMMAND

### DESCRIPTION
The LigoLANG compiler

### SUB-COMMANDS
**compile**
compile a ligo program to michelson

**transpile**
transpile ligo code from a syntax to another (BETA)

**run**
compile and interpret ligo code

**info**
tools to get information from contracts

**mutate**
create mutants of a ligo file

**repl**
interactive ligo interpreter

**init**
Initialize a new ligo project from template. Contract or library.

**changelog**
print the ligo changelog

**print**
print intermediary program representation.

**Warning:**
Intended for development of LIGO and can break at any time

**install**
install LIGO packages declared in package.json

**publish**
publish the LIGO package declared in package.json

**add-user**
create a new user for the LIGO package registry

**login**
login to the LIGO package registry

**version**
print version information

**help**
explain a given subcommand (perhaps recursively)


