gitlab-pages/website/versioned_docs/version-1.3.0/manpages/ligo.md

### SYNOPSIS
```
ligo SUBCOMMAND
```

### DESCRIPTION
The LigoLANG compiler

### SUB-COMMANDS
**compile**
compile a ligo program to michelson

**transpile**
Transpile ligo code from a syntax to another

**transpile-with-ast**
[BETA] transpile ligo code from a syntax to another

**run**
compile and interpret ligo code

**info**
tools to get information from contracts

**repl**
interactive ligo interpreter

**init**
Initialize a new ligo project from template. Contract or library.

**changelog**
print the ligo changelog

**print**
print intermediary program representation. Warning: Intended for development of LIGO and can break at any time

**install**
install LIGO dependencies declared in ligo.json

**lsp**
[BETA] launch a LIGO lsp server

**doc**
[BETA] Generate a documentation for your project

**analytics**
Manage analytics

**registry**
Commands to interact with Ligo Package Registry

**version**
print version information

**help**
explain a given subcommand (perhaps recursively)


